[package]
name = "rusty_things_organizer_4fun_util"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
text_io = "0.1"
serde = { version = "1", features = ["derive"] }
prettytable-rs = "^0.8"
